Fix header jumping positions

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
+html
+{
+    /* Always show the scroll bar, otherwise longer pages cause
+       the scroll bar to show, which changes the width of the content
+       and then affects the auto margins. tldr: makes header jump positon.
+    overflow-y: scroll;
+}
+
 div.post
 {
    font-size: 20px;
